[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bladerf-sdr-aio"
version = "0.9"
authors = [
  { name="Christoph Schmied", email="smith1401@hotmail.com" },
]
description = "An asynchronous Python wrapper based on the official bladerf python library from Nuand"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smith1401/bladerf-sdr-aio"
"Bug Tracker" = "https://github.com/smith1401/bladerf-sdr-aio/issues"